# ChangeLog for app-misc/mc
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/mc/ChangeLog,v 1.179 2010/01/02 15:15:46 ranger Exp $

  02 Jan 2010; Brent Baude <ranger@gentoo.org> mc-4.7.0_pre3.ebuild:
  Marking mc-4.7.0_pre3 ppc64 for bug 290347

*mc-4.7.0 (26 Dec 2009)

  26 Dec 2009; Alex Alexander <wired@gentoo.org> +mc-4.7.0.ebuild:
  version bump, bug #298385

  26 Nov 2009; Raúl Porcel <armin76@gentoo.org> mc-4.7.0_pre3.ebuild:
  arm/ia64/s390/sh/sparc stable wrt #290347

  12 Nov 2009; Jeroen Roovers <jer@gentoo.org> mc-4.7.0_pre3.ebuild:
  Stable for HPPA (bug #290347).

  08 Nov 2009; Tobias Klausmann <klausman@gentoo.org> mc-4.7.0_pre3.ebuild:
  Stable on alpha, bug #290347

  01 Nov 2009; nixnut <nixnut@gentoo.org> mc-4.7.0_pre3.ebuild:
  ppc stable #290347

*mc-4.7.0_pre4 (30 Oct 2009)

  30 Oct 2009; Alex Alexander <wired@gentoo.org> +mc-4.7.0_pre4.ebuild:
  version bump

  30 Oct 2009; Markus Meier <maekke@gentoo.org> mc-4.7.0_pre3.ebuild:
  amd64/x86 stable, bug #290347

  10 Oct 2009; Raúl Porcel <armin76@gentoo.org> mc-4.7.0_pre1.ebuild:
  ia64/s390/sh/sparc stable wrt #281667

  04 Oct 2009; Markus Meier <maekke@gentoo.org> mc-4.7.0_pre1.ebuild:
  arm stable, bug #281667

*mc-4.7.0_pre3 (02 Oct 2009)

  02 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> +mc-4.7.0_pre3.ebuild:
  Version bump wrt #287375, thanks to Lars Wendler for reporting.

  26 Sep 2009; Brent Baude <ranger@gentoo.org> mc-4.7.0_pre1.ebuild:
  Marking mc-4.7.0_pre1 ppc64 for bug 281667

  22 Sep 2009; Markus Meier <maekke@gentoo.org> mc-4.7.0_pre1.ebuild:
  x86 stable, bug #281667

*mc-4.7.0_pre2-r1 (04 Sep 2009)

  04 Sep 2009; Samuli Suominen <ssuominen@gentoo.org>
  +mc-4.7.0_pre2-r1.ebuild, +files/mc-4.7.0_pre2-horizontal_split.patch:
  Fix wrong charset dialog placement.
  http://www.midnight-commander.org/ticket/1451.

  01 Sep 2009; Jeroen Roovers <jer@gentoo.org> mc-4.7.0_pre1.ebuild: