@@ -19,10 +19,12 @@ AUX mc.ini 43 RMD160 2254610744c484553cd3332a4f45e439b13cceed SHA1 dde4fa7bc4486
 DIST mc-4.7.0-pre1.tar.bz2 2783935 RMD160 0f63d2a3b30af097697ae5fb715bb04249877e9b SHA1 028dcdc998f012445cb9a3c707f9411bbe46ac65 SHA256 a774ff52ef9ba4654e3bf48081f4775ad90fb4d86f1670d6a3a6804d090213ef
 DIST mc-4.7.0-pre3.tar.bz2 2815368 RMD160 301a961bc7a5305f72de5fa85e730d36883a367d SHA1 2c67b231e29f6d1c410e7da51bb49cf84eeb83d9 SHA256 267ba6546665da7eae5d25b7b6ea5800f527027c45497d20385b5c218f170e88
 DIST mc-4.7.0-pre4.tar.bz2 2836464 RMD160 07c1ed27f22db7300a35ceafc345259ad08ec2c5 SHA1 b28238bbe24a5c58ace1683e5caa09981f22fa3a SHA256 ea3cec8e82e83a887524e2d10e9c490cd1b1fa6c97e3ab49c4faa87960c3f069
+DIST mc-4.7.0.1.tar.bz2 2831780 RMD160 15d77153377ea8b11910179e7267d70c2ccc303d SHA1 a5953341eee78c29d84f2c426c082a58516904e5 SHA256 4abb66b20c46c583159b29109282cf0d8cf2c7cc078e6062d914c95e776057c4
 DIST mc-4.7.0.tar.bz2 2846790 RMD160 acba166fa26f6fde0f11674018343357188c0c4b SHA1 027aab31da46d3aee6f06e2896b6c37113201ec6 SHA256 e85a4838bd6088ecb433311a28d7279816df85dd9c0b934d1329380c536e65d1
+EBUILD mc-4.7.0.1.ebuild 1614 RMD160 37afe65b6a5c7b214f603ac806c39d98b1503c66 SHA1 ae1d355493c985b23017528d5b3a91ed2e10a451 SHA256 b539700663051613d4568631f5872e82ceb384fb74b18fe08ce73a884daceb16
 EBUILD mc-4.7.0.ebuild 1612 RMD160 d90d5db31547fa453a220baafa1d4f959eb9d9c0 SHA1 a5268a8f36e542254b7e87cc4e4c2246c23ed65e SHA256 b73bbb27135398d7fcce5ae4d3075aee20ca5f3b361fb7b20d0b38a6d258e5a9
 EBUILD mc-4.7.0_pre1.ebuild 1882 RMD160 bcf48ede3d5be8f1843a93278101ac65f28e653a SHA1 6b7e73e3268b10bc8424c627dee1764224b304d7 SHA256 987b56b5e7da460d475791c1b5f61a92eac54d83290b043630a15f2c0ffbe941
 EBUILD mc-4.7.0_pre3.ebuild 1618 RMD160 6b6b152661b2b79dee00edd7cc2d3f39d691faa2 SHA1 99bc0f5529bd0eb51e01a5663eb44721847ef4a1 SHA256 4f31218756731431c2827e55cad9ee1e734d1f4cd3e8a9bd14ad3bb893231cd8
 EBUILD mc-4.7.0_pre4.ebuild 1617 RMD160 2633de09826fe9b98ee759ae07e32348423f5f4b SHA1 879e2f1b5f6073285cb662a7622b496bd68f651e SHA256 652d5bf3cb814c274dafdaf02476fe9811fea50d049a520d2ebde026a04140dc
-MISC ChangeLog 25105 RMD160 d00ed23c1d08eb09f619cd8fbc82c731ebcee7ea SHA1 db630a58ea648e2b78afdbd59d572e92bb298b83 SHA256 0564c4acc8db96e38313e98c269d52da058e566aafc997ab2163c2a2ea981d73
+MISC ChangeLog 25216 RMD160 517ea0904a0b4638b3c65d594a75b49bcc00c75c SHA1 198bfea9da2cedbd46bbce3f3eae658957b6a395 SHA256 6c0760d1d7137d019fa867f5a4d3a1767e25a8e56cdd66312190f23a71b30893
 MISC metadata.xml 305 RMD160 319f6d3a222a3028d69dfb5ece59f4ae0343125a SHA1 705291c975a8b25ccc5a040d4fa7feab9190048e SHA256 e8245261e4eaebac2b2f5017c36165f9e733bc1e3619392b8f64c0d5392e7cd9
